Fix z-index landscape image

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -345,6 +345,7 @@ body {
   
   .container-intro{
     padding:0;
+    margin-top: 50px;
   }
   .column {
     width: 100%;
